New coin detection algorithm & Delays to avoid duplicates

--- a/Coins/Coins.ipynb
+++ b/Coins/Coins.ipynb
@@ -124,8 +124,8 @@
     "                \n",
     "                #collision or containment:\n",
     "                #print inter_centre_distance(x1,y1,x2,y2), Radius1, Radius2\n",
-    "                #if inter_centre_distance(x1,y1,x2,y2) < (Radius1 + Radius2)*0.95:\n",
-    "                if inter_centre_distance(x1,y1,x2,y2) < (Radius1 + Radius2)*0.85:\n",
+    "                if inter_centre_distance(x1,y1,x2,y2) < (Radius1 + Radius2)*0.95:\n",
+    "                #if inter_centre_distance(x1,y1,x2,y2) < (Radius1 + Radius2)*0.85:\n",
     "                    print(\"Warning: There are colliding circles \"+str(len(circles[0,:])))\n",
     "                    return True\n",
     "    else:\n",
@@ -141,7 +141,7 @@
     "        cv2.circle(cimg,(i[0],i[1]),2,(0,255,0),3)\n",
     "    return cimg\n",
     "            \n",
-    "def findCircles(img, param1=50, param2=50):\n",
+    "def findCircles(img, param1=50, param2=30):\n",
     "    minDist = int(img.shape[1]/15) # To test\n",
     "    minRadius = int(img.shape[1]/35) # To test\n",
     "    #gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
@@ -155,16 +155,27 @@
     "    try:\n",
     "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius)\n",
     "        showInformation(drawCircles(img, circles))\n",
+    "        nRefCircles = min(len(circles[0,:]),5)\n",
+    "        refRadius = np.mean(circles[0,0:(nRefCircles+1),2])\n",
+    "        minRadius = int(refRadius*0.8)\n",
+    "        maxRadius = int(refRadius*1.6)\n",
+    "        #maxRadius = int(min(circles[0,0:-1,2])*2) # 50% more than the smallest circle\n",
+    "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius, maxRadius=maxRadius)\n",
     "    except:\n",
     "        param2=int(param2/2) # largely reduce par2 to ensure convervence\n",
     "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius)    \n",
-    "        \n",
+    "        nRefCircles = min(len(circles[0,:]),5)\n",
+    "        refRadius = np.mean(circles[0,0:(nRefCircles+1),2])\n",
+    "        minRadius = int(refRadius*0.8)\n",
+    "        maxRadius = int(refRadius*1.6)\n",
+    "        #maxRadius = int(min(circles[0,0:-1,2])*2)\n",
+    "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius, maxRadius=maxRadius)\n",
+    "    \n",
     "    #Suspect that I miss circles\n",
     "    while len(circles[0,:]) in range(0,11) and param2>=70: \n",
     "        param2 = param2 -5\n",
     "        #twice the separation to reduce fakes\n",
-    "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius)\n",
-    "        \n",
+    "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius)    \n",
     "    #Suspect that I have too many circles\n",
     "    while colliding_circles(circles) == True:\n",
     "        step = 0.5\n",
@@ -176,7 +187,7 @@
     "            step = 5\n",
     "        param2 = param2 +step\n",
     "        print(\"Trying para2... \"+str(param2))\n",
-    "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius)\n",
+    "        circles = cv2.HoughCircles(gray,cv2.HOUGH_GRADIENT,0.01,minDist, param1=param1, param2=param2, minRadius=minRadius, maxRadius=maxRadius)\n",
     "\n",
     "    ncircles = len(circles[0,:])\n",
     "    #Decrease the criteria to built a circle (at the risk of getting fakes) when low number of circles found.\n",
@@ -214,6 +225,7 @@
     "    print(source)\n",
     "    for index, i in enumerate(candidates):\n",
     "        #print index, i.shape\n",
+    "        time.sleep(.01)\n",
     "        img = Image.fromarray(i, 'RGB')\n",
     "        img.save(output_filename+str(index+1)+\".jpg\")\n",
     "    return 0\n",
@@ -231,15 +243,15 @@
     "    return 0\n",
     "\n",
     "#input information to explores\n",
-    "InputFolder = \"CandidateDataSet2/RAW/50cent/\" # Here I store the input images\n",
-    "CoinsOutputFolder = \"CandidateDataSet2/Processed_RAW/50cent/\" # Here I store the pictures of individual coins\n",
-    "CirclesOutputFolder = \"CandidateDataSet2/Circles_RAW/50cent/\" # Here I store the pictures of individual coins\n",
+    "InputFolder = \"CandidateDataSet2/RAW/2euro/\" # Here I store the input images\n",
+    "CoinsOutputFolder = \"CandidateDataSet2/Processed_RAW/2euro/\" # Here I store the pictures of individual coins\n",
+    "CirclesOutputFolder = \"CandidateDataSet2/Circles_RAW/2euro/\" # Here I store the pictures of individual coins\n",
     "\n",
     "\n",
     "import glob\n",
     "input_file = glob.glob(InputFolder+\"*.jpg\") #Try new Samples\n",
     "\n",
-    "#input_file = [InputFolder+\"IMG_20170128_134036.jpg\"]  #For debugging\n",
+    "#input_file = [InputFolder+\"P70210-165858.jpg\"]  #For debugging\n",
     "#input_file = [\"P70127-122008.jpg\"]  #For debugging\n",
     "\n",
     "for kfile in input_file:\n",
@@ -260,25 +272,11 @@
     "    circles = findCircles(imgResized)\n",
     "    showInformation(drawCircles(imgResized, circles))\n",
     "    candidates = showCandidates(imgResized, circles)\n",
-    "    #circles = findCircles(imgSubstracted)\n",
-    "    #showInformation(drawCircles(imgSubstracted, circles))\n",
-    "    #candidates = showCandidates(imgSubstracted, circles)\n",
+    "\n",
     "    #Saving output\n",
     "    saveCandidates(CoinsOutputFolder, kfile, candidates)\n",
     "    saveCircles(CirclesOutputFolder, kfile, drawCircles(imgResized, circles))\n",
     "    toc()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "re.split(r'/|\\\\',kfile)"
    ]
   },
   {
