Some changes to data augmentation and labeling

--- a/Coins/data_augmentation_brightness_yuv.ipynb
+++ b/Coins/data_augmentation_brightness_yuv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -50,13 +50,13 @@
     "    # Records a time in TicToc, marks the beginning of a time interval\n",
     "    toc(False)\n",
     "    \n",
-    "inputDir = 'CandidateDataSet2/augmented_and_resized_RAW/2euro/'\n",
+    "inputDir = 'CandidateDataSet2/augmented_and_resized_RAW/1cent/'\n",
     "input_file = [inputDir+i for i in os.listdir(inputDir) if '.jpg' in i]\n",
     "#input_file = glob.glob(inputDir+\"*.jpg\")\n",
-    "#input_file = [inputDir+\"P70216-135401_Candidate_1.jpg\"]  #For debugging\n",
+    "#input_file = [inputDir+\"P70210-161658_Candidate_1_Aug_100_0.jpg\"]  #For debugging\n",
     "\n",
-    "outputDir = 'CandidateDataSet2/augmented_and_resized_brightness_RAW/2euro/' #CHANGE IT!\n",
-    "brightness = [-100, -50, 0, 50, 100]\n",
+    "outputDir = 'CandidateDataSet2/augmented_and_resized_brightness_yuv_RAW/1cent/' #CHANGE IT!\n",
+    "brightness = [-25, 0, 25]\n",
     "ROWS = 100\n",
     "COLS = 100\n",
     "\n",
@@ -68,15 +68,15 @@
     "        imarray = np.array(im)\n",
     "        imarray = cv2.resize(imarray, (ROWS, COLS), interpolation=cv2.INTER_CUBIC)\n",
     "        #imarray = cv2.erode(imarray, None, 1) \n",
-    "        hsv = cv2.cvtColor(imarray, cv2.COLOR_BGR2HSV) #Convert it to hsv\n",
-    "        h, s, v = cv2.split(hsv)\n",
-    "        v = v.astype(np.int16)\n",
-    "        v += kbright\n",
-    "        v = np.maximum(np.zeros(v.shape),v)\n",
-    "        v = np.minimum(255*np.ones(v.shape),v)\n",
-    "        v = v.astype(np.uint8)\n",
-    "        final_hsv = cv2.merge((h, s, v))\n",
-    "        img_bright = cv2.cvtColor(final_hsv, cv2.COLOR_HSV2BGR)\n",
+    "        yuv = cv2.cvtColor(imarray, cv2.COLOR_BGR2YUV) #Convert it to yuv\n",
+    "        y, u, v = cv2.split(yuv)\n",
+    "        y = y.astype(np.int16)\n",
+    "        y += kbright\n",
+    "        y = np.maximum(np.zeros(y.shape),y)\n",
+    "        y = np.minimum(255*np.ones(y.shape),y)\n",
+    "        y = y.astype(np.uint8)\n",
+    "        final_yuv = cv2.merge((y, u, v))\n",
+    "        img_bright = cv2.cvtColor(final_yuv, cv2.COLOR_YUV2BGR)\n",
     "        #plt.imshow(img_bright)\n",
     "        #plt.show()\n",
     "        \n",
@@ -109,6 +109,15 @@
    "source": [
     "# Use data_ls to create the labels!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
